Remade openapi.yml
