# server/openapi.yml
@@ -2,8 +2,6 @@ openapi: 3.0.0
 servers:
     - description: SwaggerHub API Auto Mocking
       url: https://virtserver.swaggerhub.com/C4theBomb/qOverflow/1.0.0
-    - description: Localhost server
-      url: https://localhost:3001
 info:
     version: '1.0.0'
     title: qOverflow API
@@ -22,6 +20,8 @@ paths:
                             properties:
                                 username:
                                     type: string
+                                    minLength: 4
+                                    maxLength: 16
                                 email:
                                     type: string
                                     format: email
@@ -128,23 +128,18 @@ paths:
                 - users
     /users/login:
         post:
-            summary: Login a user and reciever an authentication token
+            summary: Login a user and receiver an authentication token
             security:
                 - BasicAuth: []
             requestBody:
-                required: true
                 content:
                     'application/json':
                         schema:
                             type: object
                             properties:
-                                username:
-                                    type: string
-                                email:
-                                    type: string
-                                    format: email
-                                password:
-                                    type: string
+                                remember:
+                                    type: boolean
+                                    enum: [true, false]
             responses:
                 '200':
                     description: OK
@@ -165,7 +160,7 @@ paths:
                 - users
     /users/logout:
         delete:
-            summary: Login a user and reciever an authentication token
+            summary: Login a user and receiver an authentication token
             security:
                 - BearerAuth: []
             responses:
@@ -259,7 +254,7 @@ paths:
                         schema:
                             type: object
                             properties:
-                                reciever:
+                                receiver:
                                     type: string
                                     example: 'pinapplezzz'
                                 subject:
@@ -296,6 +291,54 @@ paths:
                     description: OK
                 '400':
                     $ref: '#/components/responses/BadRequest'
+                '500':
+                    $ref: '#/components/responses/ServerError'
+            tags:
+                - questions
+    /questions/search:
+        get:
+            summary: Get a sorted set of 100 questions or search for a question
+            parameters:
+                - name: after
+                  in: query
+                  schema:
+                      type: string
+                      example: '62d6c5dc47c1eefc7acbc917'
+                  description: >-
+                      The route will return the next 100 objects after this id
+                - name: match
+                  in: query
+                  schema:
+                      type: object
+                  description: >-
+                      See [BDPA's qOverflow API](https://hscc8udvc7gs.docs.apiary.io/#/reference/0/question-endpoints/questions-search-get) for documentation
+                - name: regexMatch
+                  in: query
+                  schema:
+                      type: object
+                  description: >-
+                      See [BDPA's qOverflow API](https://hscc8udvc7gs.docs.apiary.io/#/reference/0/question-endpoints/questions-search-get) for documentation
+                - name: sort
+                  in: query
+                  schema:
+                      type: string
+                      nullable: true
+                      example: 'uvc'
+                      enum: ['u', 'uvc', 'uvac']
+                  description: >-
+                      See [BDPA's qOverflow API](https://hscc8udvc7gs.docs.apiary.io/#/reference/0/question-endpoints/questions-search-get) for documentation
+            responses:
+                '200':
+                    description: OK
+                    content:
+                        'application/json':
+                            schema:
+                                type: object
+                                properties:
+                                    questions:
+                                        type: array
+                                        items:
+                                            $ref: '#/components/schemas/Question'
                 '500':
                     $ref: '#/components/responses/ServerError'
             tags:
@@ -480,6 +523,7 @@ paths:
                             properties:
                                 text:
                                     type: string
+                                    maxLength: 150
             responses:
                 '200':
                     description: OK
@@ -597,6 +641,7 @@ paths:
                             properties:
                                 text:
                                     type: string
+                                    maxLength: 3000
             responses:
                 '200':
                     description: OK
@@ -638,6 +683,25 @@ paths:
                     $ref: '#/components/responses/BadRequest'
                 '403':
                     $ref: '#/components/responses/Forbidden'
+                '500':
+                    $ref: '#/components/responses/BadRequest'
+            tags:
+                - answers
+    /questions/{questionID}/answers/{answerID}/accept:
+        parameters:
+            - $ref: '#/components/parameters/questionID'
+            - $ref: '#/components/parameters/answerID'
+        patch:
+            summary: Accept an answer as correct
+            security:
+                - BearerAuth: []
+            responses:
+                '200':
+                    description: OK
+                '403':
+                    $ref: '#/components/responses/Forbidden'
+                '404':
+                    $ref: '#/components/responses/NotFound'
                 '500':
                     $ref: '#/components/responses/BadRequest'
             tags:
@@ -730,6 +794,7 @@ paths:
                             properties:
                                 text:
                                     type: string
+                                    maxLength: 150
             responses:
                 '200':
                     description: OK
@@ -875,13 +940,15 @@ components:
                 sender:
                     type: string
                     example: 'pinapplezzz'
-                reciever:
+                receiver:
                     type: string
                     example: 'pinapplezzz'
                 subject:
                     type: string
+                    maxLength: 45
                 text:
                     type: string
+                    maxLength: 150
                 createdAt:
                     type: string
                     format: date-time
@@ -890,8 +957,10 @@ components:
             properties:
                 title:
                     type: string
+                    maxLength: 150
                 text:
                     type: string
+                    maxLength: 3000
                 status:
                     type: string
                     enum: ['open', 'protected', 'closed']
